# model-training

./: .flake8  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  bandit.yaml  dvc.yaml  get_semver.sh  model_analysis.py  pylint_custom_ml_rules.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_all.sh  tmp.txt
.dvc/: config
.github/workflows/: lint.yml  quality.yml  release.yml
dvclive/: params.yaml
metrics/: ml_score.json  ml_test_score.json
output/: .gitignore  reviews.tsv.dvc
output/splits/: .gitignore  X_test.jbl  y_test.jbl  y_train.jbl
processed/: .gitignore  model-gauss.jbl.dvc  model-multi.jbl.dvc  sentiment_model.pkl  vectorizer.pkl
pylint_plugins/: __init__.py  ml_checks.py
review_rating/modeling/: __init__.py  __main__.py  evaluate.py  model_analysis.py  prepare_data.py  train.py
review_rating/tests/: conftest.py  test_features_and_data.py  test_infrastructure.py  test_model.py  test_monitoring.py  test_mutamorphic.py
src/: build_vectorizer.py  get_data.py  get_metrics.py  preprecessing.py  train_model.py
tests/: conftest.py  test_features_and_data.py  test_infrastructure.py  test_model.py  test_monitoring.py  test_pylint_plugin_triggered.py  test_test.py
training/: __init__.py  build_vectorizer.py  get_data.py  get_metrics.py  model_analysis.py  preprocessing.py  train_model.py
